LittleNicParser.java
// $ANTLR 3.5 C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g 2013-04-25 14:32:41

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class LittleNicParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN_STATEMENT", "BLOCK_STATEMENT", 
		"BOOLEAN", "COMMENTS", "DECLARATION", "DECLARATIONS", "DIGIT", "EXPRESSIONS", 
		"FALSE", "FUNC_CALL", "FUNC_DEC", "IDENT", "IF_STATEMENT", "INTEGER", 
		"LETTER", "NEGATION", "OUT_STATEMENT", "PARAMETER", "PARAMETERS", "PROC_DEC", 
		"PROC_STATEMENT", "PROGRAM", "STATEMENT", "STATEMENTS", "STRING_LITERAL", 
		"TERM", "TRUE", "VARS", "VAR_DEC", "WHILE_STATEMENT", "WHITESPACE", "'!='", 
		"'('", "')'", "'*'", "'+'", "','", "'-'", "':'", "':='", "';'", "'<'", 
		"'<='", "'=='", "'>'", "'>='", "'BEGIN'", "'COUNT'", "'DO'", "'ELSE'", 
		"'END'", "'FUNCTION'", "'IF'", "'OUTPUT'", "'PROCEDURE'", "'PROGRAM'", 
		"'THEN'", "'TRUTH'", "'VAR'", "'WHILE'"
	};
	public static final int EOF=-1;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int ASSIGN_STATEMENT=4;
	public static final int BLOCK_STATEMENT=5;
	public static final int BOOLEAN=6;
	public static final int COMMENTS=7;
	public static final int DECLARATION=8;
	public static final int DECLARATIONS=9;
	public static final int DIGIT=10;
	public static final int EXPRESSIONS=11;
	public static final int FALSE=12;
	public static final int FUNC_CALL=13;
	public static final int FUNC_DEC=14;
	public static final int IDENT=15;
	public static final int IF_STATEMENT=16;
	public static final int INTEGER=17;
	public static final int LETTER=18;
	public static final int NEGATION=19;
	public static final int OUT_STATEMENT=20;
	public static final int PARAMETER=21;
	public static final int PARAMETERS=22;
	public static final int PROC_DEC=23;
	public static final int PROC_STATEMENT=24;
	public static final int PROGRAM=25;
	public static final int STATEMENT=26;
	public static final int STATEMENTS=27;
	public static final int STRING_LITERAL=28;
	public static final int TERM=29;
	public static final int TRUE=30;
	public static final int VARS=31;
	public static final int VAR_DEC=32;
	public static final int WHILE_STATEMENT=33;
	public static final int WHITESPACE=34;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public LittleNicParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public LittleNicParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return LittleNicParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g"; }


	    public ErrorReporter err;
	    public void displayRecognitionError(String[] tokenNames,
	                                        RecognitionException e) {
	      String msg = getErrorMessage(e, tokenNames);
		  err.reportSyntaxError(e.line, e.charPositionInLine, msg);
	    }


	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:59:1: program : 'PROGRAM' IDENT ';' ( declarations )? 'BEGIN' ( statements )? 'END' ';' EOF -> ^( PROGRAM ^( IDENT ( declarations )? ( statements )? ) ) ;
	public final LittleNicParser.program_return program() throws RecognitionException {
		LittleNicParser.program_return retval = new LittleNicParser.program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal1=null;
		Token IDENT2=null;
		Token char_literal3=null;
		Token string_literal5=null;
		Token string_literal7=null;
		Token char_literal8=null;
		Token EOF9=null;
		ParserRuleReturnScope declarations4 =null;
		ParserRuleReturnScope statements6 =null;

		CommonTree string_literal1_tree=null;
		CommonTree IDENT2_tree=null;
		CommonTree char_literal3_tree=null;
		CommonTree string_literal5_tree=null;
		CommonTree string_literal7_tree=null;
		CommonTree char_literal8_tree=null;
		CommonTree EOF9_tree=null;
		RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
		RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
		RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleTokenStream stream_54=new RewriteRuleTokenStream(adaptor,"token 54");
		RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
		RewriteRuleSubtreeStream stream_statements=new RewriteRuleSubtreeStream(adaptor,"rule statements");
		RewriteRuleSubtreeStream stream_declarations=new RewriteRuleSubtreeStream(adaptor,"rule declarations");

		try {
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:60:9: ( 'PROGRAM' IDENT ';' ( declarations )? 'BEGIN' ( statements )? 'END' ';' EOF -> ^( PROGRAM ^( IDENT ( declarations )? ( statements )? ) ) )
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:60:17: 'PROGRAM' IDENT ';' ( declarations )? 'BEGIN' ( statements )? 'END' ';' EOF
			{
			string_literal1=(Token)match(input,59,FOLLOW_59_in_program172);  
			stream_59.add(string_literal1);

			IDENT2=(Token)match(input,IDENT,FOLLOW_IDENT_in_program174);  
			stream_IDENT.add(IDENT2);

			char_literal3=(Token)match(input,44,FOLLOW_44_in_program176);  
			stream_44.add(char_literal3);

			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:61:17: ( declarations )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==55||LA1_0==58||LA1_0==62) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:61:17: declarations
					{
					pushFollow(FOLLOW_declarations_in_program194);
					declarations4=declarations();
					state._fsp--;

					stream_declarations.add(declarations4.getTree());
					}
					break;

			}

			string_literal5=(Token)match(input,50,FOLLOW_50_in_program213);  
			stream_50.add(string_literal5);

			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:63:17: ( statements )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==IDENT||LA2_0==50||(LA2_0 >= 56 && LA2_0 <= 57)||LA2_0==63) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:63:17: statements
					{
					pushFollow(FOLLOW_statements_in_program231);
					statements6=statements();
					state._fsp--;

					stream_statements.add(statements6.getTree());
					}
					break;

			}

			string_literal7=(Token)match(input,54,FOLLOW_54_in_program250);  
			stream_54.add(string_literal7);

			char_literal8=(Token)match(input,44,FOLLOW_44_in_program252);  
			stream_44.add(char_literal8);

			EOF9=(Token)match(input,EOF,FOLLOW_EOF_in_program254);  
			stream_EOF.add(EOF9);

			// AST REWRITE
			// elements: declarations, statements, IDENT
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 65:17: -> ^( PROGRAM ^( IDENT ( declarations )? ( statements )? ) )
			{
				// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:65:20: ^( PROGRAM ^( IDENT ( declarations )? ( statements )? ) )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:65:30: ^( IDENT ( declarations )? ( statements )? )
				{
				CommonTree root_2 = (CommonTree)adaptor.nil();
				root_2 = (CommonTree)adaptor.becomeRoot(stream_IDENT.nextNode(), root_2);
				// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:65:38: ( declarations )?
				if ( stream_declarations.hasNext() ) {
					adaptor.addChild(root_2, stream_declarations.nextTree());
				}
				stream_declarations.reset();

				// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:65:52: ( statements )?
				if ( stream_statements.hasNext() ) {
					adaptor.addChild(root_2, stream_statements.nextTree());
				}
				stream_statements.reset();

				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class declarations_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declarations"
	// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:69:1: declarations : declaration ( ';' declaration )* -> ^( DECLARATIONS declaration ( declaration )* ) ;
	public final LittleNicParser.declarations_return declarations() throws RecognitionException {
		LittleNicParser.declarations_return retval = new LittleNicParser.declarations_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal11=null;
		ParserRuleReturnScope declaration10 =null;
		ParserRuleReturnScope declaration12 =null;

		CommonTree char_literal11_tree=null;
		RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
		RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");

		try {
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:70:9: ( declaration ( ';' declaration )* -> ^( DECLARATIONS declaration ( declaration )* ) )
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:70:17: declaration ( ';' declaration )*
			{
			pushFollow(FOLLOW_declaration_in_declarations319);
			declaration10=declaration();
			state._fsp--;

			stream_declaration.add(declaration10.getTree());
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:70:29: ( ';' declaration )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==44) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:70:30: ';' declaration
					{
					char_literal11=(Token)match(input,44,FOLLOW_44_in_declarations322);  
					stream_44.add(char_literal11);

					pushFollow(FOLLOW_declaration_in_declarations324);
					declaration12=declaration();
					state._fsp--;

					stream_declaration.add(declaration12.getTree());
					}
					break;

				default :
					break loop3;
				}
			}

			// AST REWRITE
			// elements: declaration, declaration
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 71:10: -> ^( DECLARATIONS declaration ( declaration )* )
			{
				// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:71:13: ^( DECLARATIONS declaration ( declaration )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLARATIONS, "DECLARATIONS"), root_1);
				adaptor.addChild(root_1, stream_declaration.nextTree());
				// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:71:40: ( declaration )*
				while ( stream_declaration.hasNext() ) {
					adaptor.addChild(root_1, stream_declaration.nextTree());
				}
				stream_declaration.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declarations"


	public static class declaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:74:1: declaration : ( varDec | procDec | funcDec );
	public final LittleNicParser.declaration_return declaration() throws RecognitionException {
		LittleNicParser.declaration_return retval = new LittleNicParser.declaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope varDec13 =null;
		ParserRuleReturnScope procDec14 =null;
		ParserRuleReturnScope funcDec15 =null;


		try {
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:75:9: ( varDec | procDec | funcDec )
			int alt4=3;
			switch ( input.LA(1) ) {
			case 62:
				{
				alt4=1;
				}
				break;
			case 58:
				{
				alt4=2;
				}
				break;
			case 55:
				{
				alt4=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:75:17: varDec
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_varDec_in_declaration380);
					varDec13=varDec();
					state._fsp--;

					adaptor.addChild(root_0, varDec13.getTree());

					}
					break;
				case 2 :
					// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:76:17: procDec
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_procDec_in_declaration398);
					procDec14=procDec();
					state._fsp--;

					adaptor.addChild(root_0, procDec14.getTree());

					}
					break;
				case 3 :
					// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:77:17: funcDec
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_funcDec_in_declaration416);
					funcDec15=funcDec();
					state._fsp--;

					adaptor.addChild(root_0, funcDec15.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class varDec_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "varDec"
	// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:80:1: varDec : 'VAR' IDENT ':' type -> ^( VAR_DEC IDENT type ) ;
	public final LittleNicParser.varDec_return varDec() throws RecognitionException {
		LittleNicParser.varDec_return retval = new LittleNicParser.varDec_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal16=null;
		Token IDENT17=null;
		Token char_literal18=null;
		ParserRuleReturnScope type19 =null;

		CommonTree string_literal16_tree=null;
		CommonTree IDENT17_tree=null;
		CommonTree char_literal18_tree=null;
		RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
		RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:81:9: ( 'VAR' IDENT ':' type -> ^( VAR_DEC IDENT type ) )
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:81:17: 'VAR' IDENT ':' type
			{
			string_literal16=(Token)match(input,62,FOLLOW_62_in_varDec448);  
			stream_62.add(string_literal16);

			IDENT17=(Token)match(input,IDENT,FOLLOW_IDENT_in_varDec450);  
			stream_IDENT.add(IDENT17);

			char_literal18=(Token)match(input,42,FOLLOW_42_in_varDec452);  
			stream_42.add(char_literal18);

			pushFollow(FOLLOW_type_in_varDec454);
			type19=type();
			state._fsp--;

			stream_type.add(type19.getTree());
			// AST REWRITE
			// elements: IDENT, type
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 82:11: -> ^( VAR_DEC IDENT type )
			{
				// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:82:14: ^( VAR_DEC IDENT type )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VAR_DEC, "VAR_DEC"), root_1);
				adaptor.addChild(root_1, stream_IDENT.nextNode());
				adaptor.addChild(root_1, stream_type.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "varDec"


	public static class varDecs_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "varDecs"
	// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:85:1: varDecs : varDec ( ';' varDec )* -> ^( VARS varDec ( varDec )* ) ;
	public final LittleNicParser.varDecs_return varDecs() throws RecognitionException {
		LittleNicParser.varDecs_return retval = new LittleNicParser.varDecs_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal21=null;
		ParserRuleReturnScope varDec20 =null;
		ParserRuleReturnScope varDec22 =null;

		CommonTree char_literal21_tree=null;
		RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
		RewriteRuleSubtreeStream stream_varDec=new RewriteRuleSubtreeStream(adaptor,"rule varDec");

		try {
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:86:3: ( varDec ( ';' varDec )* -> ^( VARS varDec ( varDec )* ) )
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:86:6: varDec ( ';' varDec )*
			{
			pushFollow(FOLLOW_varDec_in_varDecs502);
			varDec20=varDec();
			state._fsp--;

			stream_varDec.add(varDec20.getTree());
			// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:86:13: ( ';' varDec )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==44) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:86:14: ';' varDec
					{
					char_literal21=(Token)match(input,44,FOLLOW_44_in_varDecs505);  
					stream_44.add(char_literal21);

					pushFollow(FOLLOW_varDec_in_varDecs507);
					varDec22=varDec();
					state._fsp--;

					stream_varDec.add(varDec22.getTree());
					}
					break;

				default :
					break loop5;
				}
			}

			// AST REWRITE
			// elements: varDec, varDec
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 87:5: -> ^( VARS varDec ( varDec )* )
			{
				// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:87:8: ^( VARS varDec ( varDec )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VARS, "VARS"), root_1);
				adaptor.addChild(root_1, stream_varDec.nextTree());
				// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:87:22: ( varDec )*
				while ( stream_varDec.hasNext() ) {
					adaptor.addChild(root_1, stream_varDec.nextTree());
				}
				stream_varDec.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "varDecs"


	public static class funcDec_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "funcDec"
	// C:\\Users\\Mohammad Ali\\workspace\\COMP2010_LittleNicProject\\src\\LittleNic.g:90:1: funcDec : 'FUNCTION' IDENT '(' ( parameters )? ')' ':' type ':=' ( varDecs )? 'BEGIN' ( statements )? 'END' -> ^( FUNC_DEC ^( type IDENT ( parameters )? ( varDecs )? ( statements )? ) ) ;
	public final LittleNicParser.funcDec_return funcDec() throws RecognitionException {
		LittleNicParser.funcDec_return retval = new LittleNicParser.funcDec_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal23=null;
		Token IDENT24=null;
		Token char_literal25=null;
		Token char_literal27=null;
		Token char_literal28=null;
		Token string_literal30=null;
		Token string_literal32=null;
		Token string_literal34=null;
		ParserRuleReturnScope parameters26 =null;
		ParserRuleReturnScope type29 =null;
		ParserRuleReturnScope varDecs31 =null;
		ParserRuleReturnScope statements33 =null;
